# Snake

./: .gitignore  Cargo.toml  README.md
.gabum/: init.js  project.yml
src/: main.rs  palette.rs
src/ai/: mod.rs  utils.rs
src/game/: draw.rs  mod.rs  position.rs  snake.rs  state.rs
src/terminal/: key.rs  mod.rs
wasm/: index.html
