[package]
name = "snake"
version = "1.1.0"
edition = "2021"

[profile]
release.debug = "full"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bracket-lib = { git = "https://github.com/amethyst/bracket-lib.git" }
console_error_panic_hook = "~0.1"